--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     </div>
 
                     <!-- Cart Icon -->
-                    <button class="cart-btn" aria-label="Shopping Cart">
+                    <button class="cart-btn" aria-label="Shopping Cart" onclick="window.location.href='cart.html'">
                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor">
                             <circle cx="9" cy="21" r="1"></circle>
                             <circle cx="20" cy="21" r="1"></circle>
@@ -58,35 +58,51 @@
             <h2 class="section-title">Shop by Category</h2>
             <div class="category-grid">
                 <div class="category-card" data-category="sexual-wellness">
-                    <div class="category-card__image">💊</div>
+                    <div class="category-card__image">
+                        <svg width="44" height="44" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"/></svg>
+                    </div>
                     <h3 class="category-card__title">Sexual Wellness</h3>
                 </div>
                 <div class="category-card" data-category="baby-care">
-                    <div class="category-card__image">👶</div>
+                    <div class="category-card__image">
+                        <svg width="44" height="44" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M8 2h8"/><path d="M9 2v2.789a4 4 0 0 0-.672 7.28L9 20a3 3 0 0 0 6 0l.672-7.931A4 4 0 0 0 15 4.789V2"/></svg>
+                    </div>
                     <h3 class="category-card__title">Baby Care</h3>
                 </div>
                 <div class="category-card" data-category="feminine-hygiene">
-                    <div class="category-card__image">✨</div>
+                    <div class="category-card__image">
+                        <svg width="44" height="44" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M12 22a7 7 0 0 0 7-7c0-2-1-3.9-3-5.5s-3.5-4-4-6.5c-.5 2.5-2 4.9-4 6.5C6 11.1 5 13 5 15a7 7 0 0 0 7 7z"/></svg>
+                    </div>
                     <h3 class="category-card__title">Feminine Hygiene</h3>
                 </div>
                 <div class="category-card" data-category="monsoon-kit">
-                    <div class="category-card__image">🌧️</div>
+                    <div class="category-card__image">
+                        <svg width="44" height="44" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M23 12a11.05 11.05 0 0 0-22 0zm-5 7a3 3 0 0 1-6 0v-7"/></svg>
+                    </div>
                     <h3 class="category-card__title">Monsoon Kit</h3>
                 </div>
                 <div class="category-card" data-category="supplements">
-                    <div class="category-card__image">🧬</div>
+                    <div class="category-card__image">
+                        <svg width="44" height="44" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="m10.5 20.5 10-10a4.95 4.95 0 1 0-7-7l-10 10a4.95 4.95 0 1 0 7 7Z"/><path d="m8.5 8.5 7 7"/></svg>
+                    </div>
                     <h3 class="category-card__title">Supplements</h3>
                 </div>
                 <div class="category-card" data-category="beauty-care">
-                    <div class="category-card__image">💄</div>
-                    <h3 class="category-card__title">Beauty & Care</h3>
+                    <div class="category-card__image">
+                        <svg width="44" height="44" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><polyline points="22 12 18 12 15 21 9 3 6 12 2 12"/></svg>
+                    </div>
+                    <h3 class="category-card__title">Orthopedic Care</h3>
                 </div>
                 <div class="category-card" data-category="otc">
-                    <div class="category-card__image">🏥</div>
+                    <div class="category-card__image">
+                        <svg width="44" height="44" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"/><line x1="12" y1="8" x2="12" y2="16"/><line x1="8" y1="12" x2="16" y2="12"/></svg>
+                    </div>
                     <h3 class="category-card__title">Over The Counter</h3>
                 </div>
                 <div class="category-card" data-category="lab-tests">
-                    <div class="category-card__image">🧪</div>
+                    <div class="category-card__image">
+                        <svg width="44" height="44" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M10 2v7.527a2 2 0 0 1-.211.896L4.72 20.55a1 1 0 0 0 .9 1.45h12.76a1 1 0 0 0 .9-1.45l-5.069-10.127A2 2 0 0 1 14 9.527V2"/><line x1="10" y1="2" x2="14" y2="2"/></svg>
+                    </div>
                     <h3 class="category-card__title">Lab Tests</h3>
                 </div>
             </div>
@@ -98,35 +114,35 @@
         <div class="container">
             <div class="category-tabs">
                 <button class="category-tab active" data-category="sexual-wellness">
-                    <span class="category-tab__icon">💊</span>
+                    <span class="category-tab__icon"><svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"/></svg></span>
                     <span class="category-tab__name">Sexual Wellness</span>
                 </button>
                 <button class="category-tab" data-category="baby-care">
-                    <span class="category-tab__icon">👶</span>
+                    <span class="category-tab__icon"><svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M8 2h8"/><path d="M9 2v2.789a4 4 0 0 0-.672 7.28L9 20a3 3 0 0 0 6 0l.672-7.931A4 4 0 0 0 15 4.789V2"/></svg></span>
                     <span class="category-tab__name">Baby Care</span>
                 </button>
                 <button class="category-tab" data-category="feminine-hygiene">
-                    <span class="category-tab__icon">✨</span>
+                    <span class="category-tab__icon"><svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 22a7 7 0 0 0 7-7c0-2-1-3.9-3-5.5s-3.5-4-4-6.5c-.5 2.5-2 4.9-4 6.5C6 11.1 5 13 5 15a7 7 0 0 0 7 7z"/></svg></span>
                     <span class="category-tab__name">Feminine Hygiene</span>
                 </button>
                 <button class="category-tab" data-category="monsoon-kit">
-                    <span class="category-tab__icon">🌧️</span>
+                    <span class="category-tab__icon"><svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M23 12a11.05 11.05 0 0 0-22 0zm-5 7a3 3 0 0 1-6 0v-7"/></svg></span>
                     <span class="category-tab__name">Monsoon Kit</span>
                 </button>
                 <button class="category-tab" data-category="supplements">
-                    <span class="category-tab__icon">🧬</span>
+                    <span class="category-tab__icon"><svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m10.5 20.5 10-10a4.95 4.95 0 1 0-7-7l-10 10a4.95 4.95 0 1 0 7 7Z"/><path d="m8.5 8.5 7 7"/></svg></span>
                     <span class="category-tab__name">Supplements</span>
                 </button>
                 <button class="category-tab" data-category="beauty-care">
-                    <span class="category-tab__icon">💄</span>
-                    <span class="category-tab__name">Beauty & Care</span>
+                    <span class="category-tab__icon"><svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="22 12 18 12 15 21 9 3 6 12 2 12"/></svg></span>
+                    <span class="category-tab__name">Orthopedic Care</span>
                 </button>
                 <button class="category-tab" data-category="otc">
-                    <span class="category-tab__icon">🏥</span>
+                    <span class="category-tab__icon"><svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"/><line x1="12" y1="8" x2="12" y2="16"/><line x1="8" y1="12" x2="16" y2="12"/></svg></span>
                     <span class="category-tab__name">OTC</span>
                 </button>
                 <button class="category-tab" data-category="lab-tests">
-                    <span class="category-tab__icon">🧪</span>
+                    <span class="category-tab__icon"><svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M10 2v7.527a2 2 0 0 1-.211.896L4.72 20.55a1 1 0 0 0 .9 1.45h12.76a1 1 0 0 0 .9-1.45l-5.069-10.127A2 2 0 0 1 14 9.527V2"/><line x1="10" y1="2" x2="14" y2="2"/></svg></span>
                     <span class="category-tab__name">Lab Tests</span>
                 </button>
             </div>
@@ -152,7 +168,7 @@
                     <h2 class="section-title">Book Your Lab Test</h2>
                     <p class="lab-booking__desc">Get accurate lab results with home sample collection. Convenient, safe, and fast.</p>
                     <ul class="lab-booking__benefits">
-                        <li>✓ Free home sample collection</li>
+                        <li>✓ Sample collection at store only</li>
                         <li>✓ Quick & accurate results</li>
                         <li>✓ Certified labs</li>
                         <li>✓ Doctor consultation available</li>
@@ -208,12 +224,12 @@
                     <p class="footer__text">Sai Medical Store is your trusted neighborhood chemist providing quality medicines, wellness products, and reliable lab testing services.</p>
                 </div>
 
-                <div class="footer__section">
+                <div class="footer__section" id="contact-us">
                     <h4 class="footer__title">Contact</h4>
                     <ul class="footer__list">
-                        <li><strong>Address:</strong> 123 Medical Lane, Health City, HC 12345</li>
-                        <li><strong>Phone:</strong> +91 9876-543-210</li>
-                        <li><strong>Email:</strong> info@saimedicalstore.com</li>
+                        <li><strong>Address:</strong> Sai Medical Store, Police Line, Talab Market, Channi Himat Jammu, 180015</li>
+                        <li><strong>Phone:</strong> +91 9419641316</li>
+                        <li><strong>Email:</strong> rameshkoul99@gmail.com</li>
                     </ul>
                 </div>
 
